--- a/Apuntes4/index.html
+++ b/Apuntes4/index.html
@@ -11,6 +11,7 @@
 
 
 <body>
+    <header>
     <h1>
         Veterinaria
     </h1>
@@ -26,6 +27,8 @@
     <p class="parrafo-color">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur quisquam expedita velit minima totam minus molestiae aliquam iure soluta odit, rem voluptatum. Tenetur minima labore molestiae laboriosam voluptatem fuga tempore.
     </p>
+    </header>
+    
     <main>
     <section class="conteiner">
         <h2 id="subtitulo-contacto" class="subtitulo-mediano">
