--- a/Actividades4/01-presentacion/index.html
+++ b/Actividades4/01-presentacion/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presntación modo oscuro</title>
-    <link rel="stylesheet" href="modo-oscuro.css">
+    <title>Presentación</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>
@@ -14,5 +14,6 @@
     <p>
         Futura <span class="programadora-frontend">Programadora Frontend</span> , estudio <span class="ingles">ingles</span> en mi tiempo libre y me gusta la <span class="musica">música</span>.
     </p>
+    
 </body>
 </html>
