--- a/Actividades4/04-paisajes/index.html
+++ b/Actividades4/04-paisajes/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paisaje</title>
-    <link rel="stylesheet" href="paisaje.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <span class="puente">🌉</span><span class="atardecer">🌄</span><span class="torre">🗼</span><span class="ciudad">🌃</span><span class="estatua">🗽</span><span class="playa">🏄🏻‍♀</span><span class="montania">🏞️</span><span class="luna">🎑</span><span class="desierto">🏜️</span><span class="cielo">🌌</span>
